# Turtlebot_Web_Interface

./: README.md  index.html  main.js
Answer/: main.js
course_web_dev_ros/: CMakeLists.txt
course_web_dev_ros/launch/: mapping.launch  project.launch  sim_hector_obstacles.launch  sim_husky_clearpath_playpen.launch  sim_turtlebot2_clearpath_playpen.launch  sim_turtlebot2_empty.launch  tf2_web.launch  web.launch
course_web_dev_ros/scripts/: example_action_server.py  example_services.py  hector_services_copy.py  robot_params.py  turtlebot_2_action_server.py
kobuki_description/urdf/: kobuki.urdf.xacro  kobuki_imu.urdf.xacro
